--- a/custom_components/inseego_m3000/manifest.json
+++ b/custom_components/inseego_m3000/manifest.json
@@ -4,6 +4,7 @@
   "codeowners": ["@sjoerger"],
   "config_flow": true,
   "documentation": "https://github.com/sjoerger/inseego_m3000",
+  "issue_tracker": "https://github.com/sjoerger/inseego_m3000/issues",
   "integration_type": "device",
   "iot_class": "local_polling",
   "requirements": ["aiohttp>=3.8.0"],
