Tell validator action to ignore topics and brand checks.

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -17,6 +17,7 @@ jobs:
         uses: "hacs/action@main"
         with:
           category: "integration"
+          ignore" "brand topics"
           
       - name: Hassfest validation
         uses: "home-assistant/actions/hassfest@master"
