--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -17,7 +17,7 @@ jobs:
         uses: "hacs/action@main"
         with:
           category: "integration"
-          ignore" "brand topics"
+          ignore: "brand topics"
           
       - name: Hassfest validation
         uses: "home-assistant/actions/hassfest@master"
